my first assignment

--- a/front_end/new.html
+++ b/front_end/new.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="Style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,6 +27,11 @@
 </div>
 </div>
 <h1>another level</h1>
+<p class="week">this is for week 4</p>
+<p class="week4">this is for week 4</p>
+<p class="testing">week 4 testing</p>
+
+
 <!-- <pIcture>
 <source srcset="(download (3).jpg)" media="max-width: 600px">
 <source media="(max-width:1500px )" srcset="download (3).jpg">
